# boilerapi-service

./: .gitignore  Dockerfile  README.md  golden-ami.pkr.hcl  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt
.github/workflows/: Readme.md  aws-publish-codeartifact.yml  aws-publish-dockerartifact.yml  build-golden-ami.yaml  build-wheel.yml  docker-image-release.yml  golden-ami.pkr.hcl  release-artifact.yml
app/: __init__.py  gunicorn_conf.py  main.py
app/deploy/: systemd.py  systemd_install.py
app/deploy/systemd/: boilerapi-service.service  fastapi-app.service
app/tools/: systemd.py
deploy/systemd/: fastapi-app.service
