[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm[simple]>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "boilerapi-service"

dynamic = ["version"]

description = "Boiler Service"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Youssef H" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi==0.110.2",
  "pydantic==2.7.1",
  "uvicorn[standard]==0.29.0",
  "gunicorn==22.0.0",
]


[tool.setuptools]
packages = ["app"]
