[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm[simple]>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "boilerapi-service"

dynamic = ["version"]

description = "Boiler Service"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Youssef H" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.9,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "gunicorn==22.0.0"
]

[project.scripts]
boilerapi-install-systemd = "app.deploy.systemd.systemd:main"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"app.deploy.systemd" = ["boilerapi-service.service"]